# soulstruct-gui

./: .gitignore  README.md  SoulstructProjectEditor.spec  pyproject.toml  requirements.txt  setup.py
soulstruct_gui/: __init__.py  __main__.py  _logging.py  typing.pyi  window.py
soulstruct_gui/base/: core.py  links.py  runtime.py  save_manager.py  utilities.py  window.py
soulstruct_gui/base/editors/: ai.py  base_editor.py  events.py  field_editor.py  game_enums.py  lighting.py  maps.py  params.py  talk.py  text.py
soulstruct_gui/base/qt_editors/base/: __init__.py  editor.py  entry_list.py  entry_row.py
soulstruct_gui/bloodborne/: core.py  links.py  maps.py  window.py
soulstruct_gui/darksouls1ptde/: core.py  links.py  maps.py  runtime.py  window.py
soulstruct_gui/darksouls1r/: core.py  lighting.py  links.py  maps.py  runtime.py  window.py
soulstruct_gui/eldenring/: core.py  links.py  maps.py  window.py
soulstruct_gui/misc/: game_selector.py  mod_manager.py
soulstruct_gui/window/: __init__.py  custom_dialog.py  loading_dialog.py  menu.py  super_frame.py  tooltip.py  typing.py  utilities.py
soulstruct_gui/window/smart_widgets/: __init__.py  base.py  button.py  canvas.py  checkbutton.py  combobox.py  config.py  entry.py  frame.py  label.py  listbox.py  menu.py  notebook.py  paned_window.py  progressbar.py  radiobutton.py  scale.py  scrollbar.py  separator.py  text.py  toplevel.py  typing.pyi
src/soulstruct/gui/: __main__.py  config.py  typing.pyi  window.py
src/soulstruct/gui/base/: core.py  enums.py  links.py  (+3 more)
tests/: test_darksouls1r_project.py
(+31 files in other folders)
